--- a/react-pc/package.json
+++ b/react-pc/package.json
@@ -9,6 +9,8 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.9.1",
     "axios": "^1.5.0",
+    "mobx": "^6.10.2",
+    "mobx-react-lite": "^4.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
